hoàn thiện sơ bộ

--- a/WebThuvien/Views/Admin/Index.cshtml
+++ b/WebThuvien/Views/Admin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Admin-Trang chủ";
+    ViewBag.Title = "Trang chủ";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
