--- a/WebThuvien/Views/Admin/The.cshtml
+++ b/WebThuvien/Views/Admin/The.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Tài liệu thư viện";
+    ViewBag.Title = "Thẻ thư viện";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
