--- a/WebThuvien/Views/Admin/ThemThe.cshtml
+++ b/WebThuvien/Views/Admin/ThemThe.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Thêm mới sách";
+    ViewBag.Title = "Thêm mới thẻ";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
