--- a/WebThuvien/Views/Home/HeaderSection.cshtml
+++ b/WebThuvien/Views/Home/HeaderSection.cshtml
@@ -53,13 +53,12 @@
                             <div class="col-sm-8">
                                 <div class="navbar-collapse hidden-sm hidden-xs">
                                     <ul class="nav navbar-nav">
-                                        <li><a id="home-nav" href="/home" style="color:#84bb45">Trang chủ</a></li>
-                                        <li><a id="sach-nav" href="/sach">Sách &amp; Đa phương tiện</a></li>
+                                        <li><a id="home-nav" href="/home" style="color:#84bb45; font-size:15px;">Trang chủ</a></li>
+                                        <li><a style="font-size:15px;" id="sach-nav" href="/sach">Sách &amp; Đa phương tiện</a></li>
                                         <li>
-                                            <a id="hoatdong" href="/hoatdong">Tin tức &amp; Sự kiện</a>
+                                            <a style="font-size:15px;" id="hoatdong" href="/hoatdong">Tin tức &amp; Sự kiện</a>
                                         </li>
-                                        <li><a href="/">Dịch vụ</a></li>
-                                        <li><a href="/">Liên hệ</a></li>
+                                        <li><a style="font-size:15px;" id="lienhe" href="/lienhe">Liên hệ</a></li>
                                     </ul>
                                 </div>
                             </div>
