--- a/WebThuvien/Views/Admin/Taikhoan.cshtml
+++ b/WebThuvien/Views/Admin/Taikhoan.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "MuonSach";
+    ViewBag.Title = "Tài khoản";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
