--- a/WebThuvien/Views/Home/Login.cshtml
+++ b/WebThuvien/Views/Home/Login.cshtml
@@ -167,7 +167,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Mật khẩu</label>
-                                <input type="password" class="form-control" name="matkhau">
+                                <input type="password" pattern=".{6,}" title="Mật khẩu tối thiểu 6 kí tự" class="form-control" name="matkhau">
                             </div>
 
                             <div class="col-lg-12 loginbttm">
