--- a/WebThuvien/Views/Home/SliderSection.cshtml
+++ b/WebThuvien/Views/Home/SliderSection.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = null;
-}  
+} 
 
 
   <!-- Start: Slider Section -->
@@ -14,8 +14,8 @@
             if (i == 1)
             {
                 <div class="item active">
-                    <figure>
-                        <img style="min-height:700px; max-height:750px;" class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@item.HINHANH" />
+                    <figure style="min-height:700px; max-height:750px;">
+                        <img  class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@item.HINHANH" />
                     </figure>
                     <div class="container">
                         <div class="carousel-caption">
@@ -33,12 +33,12 @@
             else
             {
                 <div class="item">
-                    <figure>
-                        <img style="height:700px" class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@item.HINHANH" />
+                    <figure style="min-height:700px; max-height:750px;">
+                        <img class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@item.HINHANH" />
                     </figure>
                     <div class="container">
                         <div class="carousel-caption">
-                            <h3>Thế giới thư viện sách , khám phá ngay!</h3>
+                            <h3>Tri thức bất tận, cùng nâng cao năng lực bản thân nào!</h3>
                             <h2>@item.TENSACH</h2>
                             <p>@item.GHICHU</p>
                             <div class="slide-buttons hidden-sm hidden-xs">
